@@ -1,3 +1,8 @@
+2007-10-07  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/BaseAssemblyResolver.cs: first lookup assemblies
+	in the specified directories before trying the framework dir.
+
 2007-10-06  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil.Cil/OpCode.cs: make that a struct again, it
